@startuml

title __LISKOV's Class Diagram__\n

  namespace com.atguigu.principle.liskov {
    class com.atguigu.principle.liskov.A {
        + func1()
    }
  }
  

  namespace com.atguigu.principle.liskov {
    class com.atguigu.principle.liskov.B {
        + func1()
        + func2()
        + func3()
    }
  }
  

  namespace com.atguigu.principle.liskov {
    class com.atguigu.principle.liskov.Base {
    }
  }
  

  namespace com.atguigu.principle.liskov {
    class com.atguigu.principle.liskov.Liskov {
        {static} + main()
    }
  }
  

  com.atguigu.principle.liskov.A -up-|> com.atguigu.principle.liskov.Base
  com.atguigu.principle.liskov.B -up-|> com.atguigu.principle.liskov.Base
  com.atguigu.principle.liskov.B o-- com.atguigu.principle.liskov.A : a


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
